some styling issues on iOS

--- a/web-app/src/components/OnBoard/OnBoard.scss
+++ b/web-app/src/components/OnBoard/OnBoard.scss
@@ -20,6 +20,7 @@
 .OnBoard__Wrapper {
   position: relative;
   width: 100%;
+  //height: 100%;
 
   display: flex;
   justify-content: center;
@@ -33,9 +34,9 @@
   height: 640px;
   max-width: 360px;
 
-  border: 1px solid darken(whitesmoke, 20);
-
   position: relative;
+
+  overflow: hidden;
 }
 
 .Carrousel {
